[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qctss-client"
version = "0.3.0"
description = "QCTSS Client SDK for quantum computing resource control"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Quantaser Photonics Co. Ltd", email = "tina@quantaser.com"},
]
maintainers = [
    {name = "Quantaser Photonics Co. Ltd", email = "tina@quantaser.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["quantum", "computing", "sdk", "qctss", "client"]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "websocket-client>=1.2.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/quantaser/qctss-client"
Repository = "https://github.com/quantaser/qctss-client"
"Bug Tracker" = "https://github.com/quantaser/qctss-client/issues"

[project.scripts]
qctss-client = "qctss_client.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["qctss_client*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true